[tool.poetry]
name = "replay-cache"
version = "0.2.0"
description = "Replaying cache for LangChain"
authors = ["Ada Bohm <ada@kreatrix.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.1.30"

[tool.poetry.group.dev.dependencies]
langchain-community = "^0.0.27"
pytest = "8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
